# lithp

./: .gitignore  README.md  lithp.cabal
app/: Emit.hs  Lex.hs  Main.hs  Parse.hs
app/Std/: Assembly.c
app/Translators/: Assembly.hs  Common.hs  Python.hs
